<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pc.testproject_timetracker.TimeTrackingActivity"
    android:orientation="vertical">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/headGrey">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/view_name_task"
            android:textColor="@color/headBlack"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/view_name_description"
            android:textColor="@color/headBlack"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/view_name_time"
            android:textColor="@color/headBlack"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycler_view_id"
        android:scrollbars="vertical" >
    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="newTaskButton"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/view_name_new_task"
            android:textSize="@dimen/text_view_size"
            android:padding="@dimen/dialog_view_padding"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="share"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/view_name_share"
            android:padding="@dimen/dialog_view_padding"/>
    </RelativeLayout>

</LinearLayout>
