<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:padding="@dimen/dialog_view_padding"
android:background="@drawable/dialog_shape">
<EditText
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2"
    android:id="@+id/task_text"
    android:hint="@string/dialog_view_name_head"
    android:gravity="center"
    android:background="@drawable/dialog_shape"
    android:layout_marginBottom="@dimen/Dialog_view_margin" />
<EditText
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="8"
    android:gravity="top"
    android:id="@+id/description_text"
    android:hint="@string/dialog_view_name_body"
    android:background="@drawable/dialog_shape"
    android:paddingLeft="@dimen/dialog_view_padding"
    android:paddingRight="@dimen/dialog_view_padding"
    android:layout_marginBottom="@dimen/Dialog_view_margin" />
<TextView
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:onClick="startButton"
    android:text="@string/dialog_view_start_button"
    android:gravity="center"
    android:paddingLeft="@dimen/dialog_view_padding"
    android:paddingRight="@dimen/dialog_view_padding"
    android:background="@drawable/dialog_shape"/>
</LinearLayout>